--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -315,6 +315,11 @@
     },
     "LOADER": {
       "LOADING": "Loading..."
+    },
+    "LANGUAGES": {
+      "TITLE": "Language",
+      "ENGLISH": "English",
+      "SPANISH": "Spanish"
     }
   }
 }
