--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -320,6 +320,11 @@
     },
     "LOADER": {
       "LOADING": "Cargando..."
+    },
+    "LANGUAGES": {
+      "TITLE": "Idioma",
+      "ENGLISH": "Inglés",
+      "SPANISH": "Español"
     }
   }
 }
