--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -97,6 +97,7 @@
     },
     "PROFILE_SETTINGS": {
       "TITLE": "Profile settings",
+      "TITLE_TAB": "Profile",
       "MENU": {
         "TITLE": "Menu",
         "BASIC_DATA": "Basic data",
