Verificacion de internet y notificacion, correcion de margen de chips

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -316,7 +316,9 @@
       },
       "MESSAGE": {
         "NEW": "{{ userName}} send you a wink.",
-        "MULTIPLE": "You have {{ count }} wink request."
+        "MULTIPLE": "You have {{ count }} wink request.",
+        "NETWORK_DOWN" : "Disconnected",
+        "NETWORK_UP": "Connecting"
       }
     },
     "LOADER": {
