get Wink init Winks

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -239,8 +239,8 @@
       "ERROR": {
         "REQUIRED":	"Campo requerido.",
         "MAXIMUM":	"Supera el límite de caracteres.",
-        "EMAIL":	"Email inválido",
-        "URL":	"URL invalida",
+        "EMAIL":	"Email inválido.",
+        "URL":	"URL invalida.",
         "MINIMUM":	"No cumple con los caracteres mínimos.",
         "CHARACTER":	"Carácter no permitido.",
         "WHITE_SPACE": "Por favor, introduzca datos válidos."
