--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -66,7 +66,7 @@
   },
   "WINK": {
     "ERROR": {
-
+      "SOMETHING": "There was an error, please try again"
     },
     "BASIC_DATA": {
       "TITLE": "Basic Data",
