--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -72,7 +72,7 @@
   },
   "WINK": {
     "ERROR": {
-
+      "SOMETHING": "Hubo un error, intente de nuevo"
     },
     "BASIC_DATA": {
       "TITLE": "Datos básicos",
